added accidentally removed segues

--- a/Peng/Base.lproj/Main.storyboard
+++ b/Peng/Base.lproj/Main.storyboard
@@ -1055,6 +1055,6 @@
         <image name="logo" width="796" height="796"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="fjs-ct-l3s"/>
+        <segue reference="sRR-XK-3gh"/>
     </inferredMetricsTieBreakers>
 </document>
