--- a/Peng/Base.lproj/Main.storyboard
+++ b/Peng/Base.lproj/Main.storyboard
@@ -35,6 +35,9 @@
             <string>FuturaExtended</string>
             <string>FuturaExtended</string>
             <string>FuturaExtended</string>
+            <string>FuturaExtended</string>
+            <string>FuturaExtended</string>
+            <string>FuturaExtended</string>
         </mutableArray>
     </customFonts>
     <scenes>
@@ -402,6 +405,9 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="RANKING" id="sre-wr-f4G">
                             <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <segue destination="jLw-Lm-yhI" kind="show" id="Lkf-Rn-hDg"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
@@ -806,7 +812,112 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eOj-KV-heB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1345" y="22"/>
+            <point key="canvasLocation" x="1165" y="-384"/>
+        </scene>
+        <!--Ranking-->
+        <scene sceneID="mcy-oR-L3S">
+            <objects>
+                <tableViewController title="Ranking" id="jLw-Lm-yhI" customClass="UsersTableViewController" customModule="Peng" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="9Ql-hm-iIR">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="1" green="0.97647058819999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="separatorColor" red="0.20392156859999999" green="0.1960784314" blue="0.18823529410000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="414" placeholderIntrinsicHeight="100" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" rowHeight="100" id="b4A-3R-fpP" customClass="UsersTableViewCell" customModule="Peng" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="414" height="100"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="b4A-3R-fpP" id="bKZ-cE-Z2L">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IbT-uM-xzw">
+                                            <rect key="frame" x="0.0" y="10" width="414" height="80"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle_bg" translatesAutoresizingMaskIntoConstraints="NO" id="f85-Lq-xNZ">
+                                                    <rect key="frame" x="20" y="0.0" width="80" height="80"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="f85-Lq-xNZ" secondAttribute="height" multiplier="50:50" id="Y3p-06-E78"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="character_bandit" translatesAutoresizingMaskIntoConstraints="NO" id="bDT-wQ-MYp">
+                                                    <rect key="frame" x="-140" y="6" width="400" height="74"/>
+                                                </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2W7-U2-Spr" userLabel="info">
+                                                    <rect key="frame" x="120" y="2" width="274" height="68"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Paul Woerner" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="oQ0-fK-Izm" userLabel="nick">
+                                                            <rect key="frame" x="0.0" y="0.0" width="274" height="18.5"/>
+                                                            <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="16"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="290." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TPx-Pr-9gH" userLabel="rank">
+                                                            <rect key="frame" x="0.0" y="16" width="274" height="36"/>
+                                                            <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="31"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="&quot;I had fun once, it was aweful furfm rufmd asdasd&quot;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="soe-5m-6eN" userLabel="slogan">
+                                                            <rect key="frame" x="0.0" y="49" width="274" height="18.5"/>
+                                                            <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="15"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="TPx-Pr-9gH" firstAttribute="leading" secondItem="oQ0-fK-Izm" secondAttribute="leading" id="1Ah-m3-CD6"/>
+                                                        <constraint firstItem="soe-5m-6eN" firstAttribute="leading" secondItem="oQ0-fK-Izm" secondAttribute="leading" id="52V-WV-XuQ"/>
+                                                        <constraint firstItem="oQ0-fK-Izm" firstAttribute="leading" secondItem="2W7-U2-Spr" secondAttribute="leading" id="7Gj-BL-7Ls"/>
+                                                        <constraint firstAttribute="bottom" secondItem="soe-5m-6eN" secondAttribute="bottom" id="FPD-FA-ye3"/>
+                                                        <constraint firstItem="TPx-Pr-9gH" firstAttribute="centerY" secondItem="2W7-U2-Spr" secondAttribute="centerY" id="KxA-sj-1Pn"/>
+                                                        <constraint firstItem="TPx-Pr-9gH" firstAttribute="trailing" secondItem="oQ0-fK-Izm" secondAttribute="trailing" id="dfV-FB-TiZ"/>
+                                                        <constraint firstAttribute="trailing" secondItem="oQ0-fK-Izm" secondAttribute="trailing" id="mdI-m2-2Qb"/>
+                                                        <constraint firstItem="oQ0-fK-Izm" firstAttribute="top" secondItem="2W7-U2-Spr" secondAttribute="top" id="p9t-L1-njf"/>
+                                                        <constraint firstAttribute="trailing" secondItem="soe-5m-6eN" secondAttribute="trailing" id="xyz-aK-GIz"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="2W7-U2-Spr" firstAttribute="leading" secondItem="f85-Lq-xNZ" secondAttribute="trailing" constant="20" id="I5i-J6-L6Q"/>
+                                                <constraint firstAttribute="trailing" secondItem="2W7-U2-Spr" secondAttribute="trailing" constant="20" id="ILP-O4-m6E"/>
+                                                <constraint firstItem="f85-Lq-xNZ" firstAttribute="centerY" secondItem="IbT-uM-xzw" secondAttribute="centerY" id="Pf2-nN-wtf"/>
+                                                <constraint firstItem="2W7-U2-Spr" firstAttribute="top" secondItem="IbT-uM-xzw" secondAttribute="top" constant="2" id="RgC-cP-nLe"/>
+                                                <constraint firstItem="f85-Lq-xNZ" firstAttribute="height" secondItem="IbT-uM-xzw" secondAttribute="height" id="V5m-46-IMJ"/>
+                                                <constraint firstAttribute="bottom" secondItem="2W7-U2-Spr" secondAttribute="bottom" constant="10" id="X6n-wQ-Nu5"/>
+                                                <constraint firstItem="bDT-wQ-MYp" firstAttribute="top" secondItem="f85-Lq-xNZ" secondAttribute="top" constant="6" id="aCO-WF-cwu"/>
+                                                <constraint firstItem="bDT-wQ-MYp" firstAttribute="bottom" secondItem="f85-Lq-xNZ" secondAttribute="bottom" id="hvu-5u-yFz"/>
+                                                <constraint firstItem="f85-Lq-xNZ" firstAttribute="leading" secondItem="IbT-uM-xzw" secondAttribute="leading" constant="20" id="jef-Cz-uZp"/>
+                                                <constraint firstItem="bDT-wQ-MYp" firstAttribute="centerX" secondItem="f85-Lq-xNZ" secondAttribute="centerX" id="uTd-3i-mL8"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="IbT-uM-xzw" firstAttribute="leading" secondItem="bKZ-cE-Z2L" secondAttribute="leading" id="POm-tf-iPW"/>
+                                        <constraint firstAttribute="trailing" secondItem="IbT-uM-xzw" secondAttribute="trailing" id="Zgj-4k-2KH"/>
+                                        <constraint firstAttribute="bottom" secondItem="IbT-uM-xzw" secondAttribute="bottom" constant="10" id="fP4-ts-rmN"/>
+                                        <constraint firstItem="IbT-uM-xzw" firstAttribute="top" secondItem="bKZ-cE-Z2L" secondAttribute="top" constant="10" id="wSO-IR-8AW"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" red="1" green="0.97647058819999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <outlet property="characterImage" destination="bDT-wQ-MYp" id="FDM-rF-9U3"/>
+                                    <outlet property="nick" destination="oQ0-fK-Izm" id="dTd-Og-2Zo"/>
+                                    <outlet property="rank" destination="TPx-Pr-9gH" id="xHY-kl-l3f"/>
+                                    <outlet property="slogan" destination="soe-5m-6eN" id="Rbp-KO-43R"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="jLw-Lm-yhI" id="BYn-bh-JoO"/>
+                            <outlet property="delegate" destination="jLw-Lm-yhI" id="Q4U-RO-CmH"/>
+                        </connections>
+                    </tableView>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tkl-8Z-9Kv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1223" y="471"/>
         </scene>
         <!--CharacterChange-->
         <scene sceneID="TRZ-QG-UCL">
@@ -1046,6 +1157,7 @@
         <image name="arrow_left" width="37" height="43"/>
         <image name="arrow_right" width="37" height="42"/>
         <image name="character_amerindian" width="400" height="458"/>
+        <image name="character_bandit" width="400" height="458"/>
         <image name="character_cowboy" width="400" height="458"/>
         <image name="circle_bg" width="300" height="300"/>
         <image name="circle_bright" width="247" height="246"/>
@@ -1055,6 +1167,6 @@
         <image name="logo" width="796" height="796"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="sRR-XK-3gh"/>
+        <segue reference="fjs-ct-l3s"/>
     </inferredMetricsTieBreakers>
 </document>
